[package]
authors = ["Danny van Swieten <dannyvanswieten@gmail.com>"]
edition = "2021"
name = "rui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
skia-safe = {version = "0.55.0", features = ["textlayout"]}
thiserror = "1.0.37"
winit = "0.27.4"
wgpu = "*"
pollster = "*"